--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/react": "^4.2.1",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-collapsible": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@tailwindcss/vite": "^4.0.3",
     "@types/canvas-confetti": "^1.9.0",
